# sociaML

./: .gitignore  LICENSE.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  release.yml
examples/: preprocess_transcribe_diarize_anonymize_folder.ipynb  preprocess_transcribe_diarize_anonymize_video.ipynb  sociaMLanalysis.py
src/sociaml/: analysis.py  audio_analysis.py  datastructures.py  preprocessing.py  text_analysis.py  utils.py  video_analysis.py
src/sociaml/models/: wav2vec2LargeRobust12ftEmotionMspDim.py
tests/: test_datastructures.py  test_preprocessing.py
