[project]
name = "sociaML"
version = "0.1.0"
description = "sociaML - the Swiss Army knife for audiovisual and textual video feature extraction."
authors = [
    {name = "David Zollikofer",email = "david@zollikofer.co"},
]
dependencies = [
    "numpy>=1.26.3",
    "pandas>=2.1.4",
    "scikit-learn>=1.3.2",
    "pyannote-audio>=3.1.1",
    "librosa>=0.10.1",
    "webvtt-py>=0.4.6",
    "spacy>=3.7.2",
    "openai-whisper>=20231117",
    "moviepy>=1.0.3",
    "tqdm>=4.66.1",
    "openai>=1.7.2",
    "seaborn>=0.13.1",
    "langchain>=0.1.0",
    "tiktoken>=0.5.2",
    "torchvision>=0.16.2",
    "nltk>=3.8.1",
    "dataclasses-json>=0.6.3",
    "sentence-transformers>=2.2.2",
    "py-feat>=0.6.1",
    "audonnx>=0.7.0",
    "audeer>=1.21.0",
    "presidio-analyzer>=2.2.351",
    "presidio-anonymizer>=2.2.351",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
package-type = "library"
