[project]
name = "sociaML"
version = "0.1.4"
description = "sociaML - the Swiss Army knife for audiovisual and textual video feature extraction."
authors = [
    {name = "David Zollikofer",email = "david@zollikofer.co"},
]
dependencies = [
    "librosa>=0.10.2.post1",
    "spacy>=3.8.2",
    "tiktoken>=0.8.0",
    "torchvision>=0.20.1",
    "nltk>=3.9.1",
    "webvtt-py>=0.5.1",
    "tqdm>=4.66.6",
    "dataclasses-json>=0.6.7",
    "sentence-transformers>=3.2.1",
    "moviepy>=1.0.3",
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "pip>=24.3.1",
    "openai-whisper>=20240930",
    "pyannote-audio>=3.3.2",
    "onnxruntime>=1.20.0",
    "py-feat>=0.6.1",
]
requires-python = ">=3.10, <3.13"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"